--- a/style.css
+++ b/style.css
@@ -1,148 +1,108 @@
 /*
-
 Tutorial:
 https://www.roboleary.net/animation/2022/10/31/how-to-make-a-slick-animation-schitts-creek-title-sequence.html
-
 Part of Title Sequences collection:
 https://codepen.io/collection/nNmwgP
-
 Source code:
 https://github.com/robole/title-sequences
-
 */
-
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600");
-
 :root {
   --bar-scale-y: 0;
   --sparkle-color: rgb(253 244 215 / 40%);
 }
-
 @keyframes pop-word {
   to {
     transform: rotateX(0);
   }
 }
-
 @keyframes show {
   to {
     opacity: 1;
   }
 }
-
 @keyframes bar-scale {
   to {
     transform: scaleY(1);
   }
 }
-
 @keyframes sparkle {
   0% {
     transform: scale(0);
   }
-
   60% {
     transform: scale(1) translate(4px, 1px) rotate(8deg);
   }
-
   100% {
     transform: scale(0) translate(4px, 1px) rotate(8deg);
   }
 }
-
 @keyframes shimmer {
   to {
     text-shadow: 0 0 8px red;
   }
 }
-
 body {
   display: grid;
   height: 100vh;
-
   background-color: black;
   place-items: center;
 }
-
 #creek {
-  color: #2d545e;
+  color: #12343b;
   font-family: "Playfair Display", Vidaloka, serif;
   font-size: 3rem;
-
   line-height: 1.25;
   perspective: 500px;
 }
-
 .word {
   display: block;
-
   animation: show 0.01s forwards, pop-word 1.5s forwards;
   animation-timing-function: cubic-bezier(0.14, 1.23, 0.33, 1.16);
   opacity: 0;
-
   transform: rotateX(120deg);
   transform-origin: 50% 100%;
 }
-
 .word:nth-of-type(2) {
-  padding: 0 0;
-
+  padding: 0;
   animation-delay: 1.5s;
-
   color:
-  #2d545e;
-  
+  #12343b;
 }
-
 .superscript {
   position: relative;
   animation-delay: 3.6s;
-
   animation-duration: 0.25s;
   animation-name: shimmer;
-
   vertical-align: text-top;
 }
-
 /* bars */
 .superscript::before {
   --bar-width: 25%;
-
   position: absolute;
-
   top: 37%;
   left: 47%;
   width: 14%;
   height: 48%;
-
   animation: bar-scale 0.25s linear 3s 1 forwards;
-
   background: linear-gradient(
     to right,
     white var(--bar-width),
     transparent var(--bar-width) calc(100% - var(--bar-width)),
     white calc(100% - var(--bar-width))
   );
-
   content: "";
-
   transform: scaleY(var(--bar-scale-y));
 }
-
 /* sparkle */
 .superscript::after {
   --size: 10rem;
-
   position: absolute;
-
   top: -5%;
   left: -85%;
-
   width: var(--size);
   height: var(--size);
-
   animation: sparkle 0.4s linear 3.5s 1 forwards;
-
   background: radial-gradient(
       circle at center,
       rgb(252 249 241 / 94%) 0% 7%,
@@ -165,7 +125,6 @@ body {
       var(--sparkle-color) 300deg,
       transparent 303deg 360deg
     );
-
   border-radius: 50%;
   clip-path: polygon(
     50% 0,
@@ -176,30 +135,20 @@ body {
     0 50%,
     31.39% 34.86%
   );
-
   content: "";
-
   filter: blur(1px);
-
   transform: scale(0);
 }
-
 @media screen and (max-width: 768px) {
   #creek {
     font-size: 3rem;
   }
-
   #creek span:last-child{
     font-size: 1.8rem;
   }
   .word:nth-of-type(2) {
-    padding: 0 1rem 0 1rem;
-  
+    padding: 0 ;
     animation-delay: 1.5s;
-  
-    color:
-    #e1b382 ;
-    
   }
   /* sparkle */
   .superscript::after {
@@ -208,20 +157,15 @@ body {
 }
 @media screen and (max-width: 480px) {
   #creek {
-    font-size: 2rem;
+    font-size: 1.5rem;
+    
   }
-
   #creek span:last-child{
     font-size: 1.2rem;
   }
   .word:nth-of-type(2) {
     padding: 0 0rem 0 1rem;
-  
     animation-delay: 1.5s;
-  
-    color:
-    #e1b382 ;
-    
   }
   /* sparkle */
   .superscript::after {
